[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Images/Misc/Buttons/exit button.png" type="Texture" id=1]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/HotbarInventorySlots.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Themes/HideCollection.tres" type="Material" id=3]
[ext_resource path="res://Assets/Images/Animations/furnace/furnace.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/User interface/Furnace/furnace progress.png" type="Texture" id=5]
[ext_resource path="res://World/Player/Player/UserInterface/UiBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/CampfireSlots.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Themes/UI_Title.tres" type="Theme" id=8]
[ext_resource path="res://World/Player/Player/UserInterface/TrashCan/Trash.tscn" type="PackedScene" id=9]
[ext_resource path="res://InventoryLogic/ItemDescription.tscn" type="PackedScene" id=10]
[ext_resource path="res://World/Player/Player/UserInterface/Slots/InventorySlots.tscn" type="PackedScene" id=11]
[ext_resource path="res://Assets/Images/User interface/Furnace/furnace arrow.png" type="Texture" id=12]
[ext_resource path="res://World/Player/Player/UserInterface/Campfire/Campfire.gd" type="Script" id=13]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Campfire" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
script = ExtResource( 13 )

[node name="Bg" parent="." instance=ExtResource( 6 )]

[node name="Trash" parent="." instance=ExtResource( 9 )]

[node name="Title" type="Label" parent="."]
margin_left = 524.0
margin_top = 136.0
margin_right = 1200.0
margin_bottom = 282.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 8 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 6
text = "Campfire:"
clip_text = true

[node name="CampfireSlots" parent="." instance=ExtResource( 7 )]

[node name="InventorySlots" parent="." instance=ExtResource( 11 )]
margin_left = 551.0
margin_top = 703.0
margin_right = 1388.0
margin_bottom = 874.0
custom_constants/vseparation = 9

[node name="HotbarInventorySlots" parent="." instance=ExtResource( 2 )]
margin_left = 551.0
margin_top = 613.0
margin_right = 1388.0
margin_bottom = 694.0

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 1442.0
margin_top = 99.9999
margin_right = 1514.0
margin_bottom = 172.0
rect_scale = Vector2( 0.7, 0.7 )
texture_normal = ExtResource( 1 )

[node name="ItemDescription" parent="." instance=ExtResource( 10 )]
visible = false

[node name="FurnaceArrow" type="Sprite" parent="."]
position = Vector2( 953, 375 )
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="FireAnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.588235 )
material = ExtResource( 3 )
position = Vector2( 947, 452 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 5 )

[node name="TimerProgress" type="TextureProgress" parent="."]
modulate = Color( 0.513726, 0.513726, 0.513726, 1 )
margin_left = 865.0
margin_top = 329.0
margin_right = 952.0
margin_bottom = 374.0
rect_scale = Vector2( 2, 2 )
texture_progress = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[node name="CookTimer" type="Timer" parent="."]
wait_time = 15.0

[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="timeout" from="CookTimer" to="." method="_on_CookTimer_timeout"]
